--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>My Simple Page</title>
+</head>
+<body>
+  <p>This is a simple HTML page.</p>
+</body>
+</html>
+
+
